Update favicon and related meta links to use `.ico` and `.png` formats

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,12 +67,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon.jpeg' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.jpeg' %}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.jpeg' %}">
-    <link rel="mask-icon" href="{% static 'img/favicon.jpeg' %}" color="#0d6efd">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon.ico' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.ico' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="mask-icon" href="{% static 'img/favicon.ico' %}" color="#0d6efd">
     <meta name="msapplication-TileColor" content="#0d6efd">
-    <meta name="msapplication-TileImage" content="{% static 'img/favicon.jpeg' %}">
+    <meta name="msapplication-TileImage" content="{% static 'img/favicon.ico' %}">
 
     {% block extra_css %}{% endblock %}
 </head>
